force-app/main/default/objects/TiAPI__mdt/TiAPI__mdt.object-meta.xml
<CustomObject>
    <label>TiAPI</label>
    <pluralLabel>TiAPI</pluralLabel>
</CustomObject>