force-app/main/default/objects/TiAPI__mdt/fields/Parameter_Value__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Value__c</fullName>
    <label>Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>