force-app/main/default/objects/TiAPI__mdt/fields/Set_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Set_Time_Out__c</fullName>
    <label>Set Time Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>