force-app/main/default/objects/TiAPI__mdt/fields/Url_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Url_Mapping__c</fullName>
    <label>Url Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>